added all the information and facts as well as the page for the quiz

--- a/index.html
+++ b/index.html
@@ -2,22 +2,31 @@
 <html>
 <head>
   <!-- Link your css file here -->
-  
+  <link rel="stylesheet" type="text/css" href="style.css">
   
   <!-- Create a title for your website tab -->
-
+<h1>All About Pong</h1>
 
 </head>
 <body>
-  <div class="title">
-    <h2>My Topic</h2>
-  </div>
   <div class="navigation">
-    <a href="index.html">HOME</a>
-    <a href="">LINK</a>
+    <a href="index.html">Home</a>
+    <a href="quiz.html">Quiz</a>
+  </div>
+  <div class="title">
+    <h2>Information</h2>
   </div>
   <div>
-    <p>What research did you find? How might you format this?</p>
+    <p>
+      <p>Invented: 1972</p>
+      <p>Born: 1972</p>
+      <p>Significane: Pong was the first video game created and which helped launch the video game industry.</p>
+      <ul>
+        <li>Pong was not the first arcade video game.</li>
+        <li>It is considered the first successful arcade video game.</li>
+        <li>The creators of Pong actually didn’t want to build the game themselves.</li>
+      </ul>
+    </p>
   </div>
 
 
