Added pictures and a quiz

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     </p>
   </div>
 
-
+  <img src="https://www.armytimes.com/resizer/PgYBktERy6zqNWvDVYgaJg5gtwg=/1200x0/filters:quality(100)/arc-anglerfish-arc2-prod-mco.s3.amazonaws.com/public/OJ2TU2UQ7REHBNP5V5U6BWUJVI.jpg" alt="Creators of Pong">
+  <h3>Creators of Pong by Victoria Long on militarytimes.com</h3>
   <!-- Link your script file here -->
-  
+  <script src="script.js"></script>
   
 </body>
 </html>
