--- a/quiz.html
+++ b/quiz.html
@@ -14,5 +14,33 @@
     <a href="quiz.html">Quiz</a>
   </div>
 
+  <script src="script.js"></script>
+
+  <style>
+    .quizButton{
+        background-color: white;
+        color: black;
+        border: 4px solid rgb(1, 1, 170);
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        margin: 4px 2px;
+    }
+
+    .question{
+        font-size: 24px;
+    }
+</style>
+
+  <p class="question" id="question">What company is the creator of Pong?</p>
+    <button class="quizButton">Nintendo</button>
+    <button class="quizButton">Sega</button>
+    <button class="quizButton">Atari</button>
+    <button class="quizButton">Microsoft</button>
+
+    <img src="    https://www.lifewire.com/thmb/BlLR937yZ-qbFuPG-PpUWudA1EI=/768x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Pong.svg-58ae72833df78c345ba1e34e.png
+    " alt="Pong Game">
+    
 </body>
 </html>
