Finished up the quiz and added sources

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="navigation">
     <a href="index.html">Home</a>
     <a href="quiz.html">Quiz</a>
+    <a href="sources.html">Sources</a>
   </div>
   <div class="title">
     <h2>Information</h2>
