--- a/quiz.html
+++ b/quiz.html
@@ -12,9 +12,8 @@
     <div class="navigation">
     <a href="index.html">Home</a>
     <a href="quiz.html">Quiz</a>
+    <a href="sources.html">Sources</a>
   </div>
-
-  <script src="script.js"></script>
 
   <style>
     .quizButton{
@@ -39,8 +38,13 @@
     <button class="quizButton">Atari</button>
     <button class="quizButton">Microsoft</button>
 
+    <p>&nbsp;</p>
+
     <img src="    https://www.lifewire.com/thmb/BlLR937yZ-qbFuPG-PpUWudA1EI=/768x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Pong.svg-58ae72833df78c345ba1e34e.png
     " alt="Pong Game">
+    <h3>Pong: The First Video Game Megahit by D.S. Cohen on lifewire.com</h3>
     
+    <script src="script.js"></script>
+
 </body>
 </html>
