Added licenses to images

--- a/quiz.html
+++ b/quiz.html
@@ -43,6 +43,7 @@
     <img src="    https://www.lifewire.com/thmb/BlLR937yZ-qbFuPG-PpUWudA1EI=/768x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Pong.svg-58ae72833df78c345ba1e34e.png
     " alt="Pong Game">
     <h3>Pong: The First Video Game Megahit by D.S. Cohen on lifewire.com</h3>
+    <h4>Bumm13 / Wikimedia Commons / Public Domain</h4>
     
     <script src="script.js"></script>
 
