--- a/sources.html
+++ b/sources.html
@@ -21,6 +21,7 @@
     <p>&nbsp;</p>
     <p>&nbsp;</p>
 
-<li>Leoni, V. (2018, June 3). Marine who created 'Pong' was a founding father of modern video gaming. Retrieved December 19, 2019, 
+<li>Leoni, V. (2018, June 3). Marine who created 'Pong' was a founding father of modern video gaming. 
+    Retrieved December 19, 2019, 
     from https://www.militarytimes.com/off-duty/military-culture/2018/06/01/marine-who-created-pong-was-a-founding-father-of-modern-video-gaming/.</li>
 </ul>    
